# emg_Gforce_armband

./: LICENSE  List Terminal commands.txt  README.md
Arduino_vibro_code/: readme.txt
Arduino_vibro_code/virbo_code/: virbo_code.ino
emg_simulator/: README.md
emg_simulator/emg_signal_simulator/: CMakeLists.txt  package.xml
emg_simulator/emg_signal_simulator/include/emg_signal_simulator/: EmgSignalSimulator_class.hpp
emg_simulator/emg_signal_simulator/launch/: EmgSignalSimulator_class_node.launch
emg_simulator/emg_signal_simulator/src/: EmgSignalSimulator_class.cpp  EmgSignalSimulator_class_client_node.cpp  EmgSignalSimulator_class_node.cpp
emg_simulator/emg_signal_simulator_msgs/: CMakeLists.txt  package.xml
emg_simulator/emg_signal_simulator_msgs/srv/: SetEmgSignal.srv  SetEmgSignalwDuration.srv
emg_state_machine/: README.md
emg_state_machine/emg_state_machine/: CMakeLists.txt  package.xml
emg_state_machine/emg_state_machine/config/: settings.yaml
emg_state_machine/emg_state_machine/launch/: emg_state_machine.launch
emg_state_machine/emg_state_machine/scripts/: emg_state_machine_pub.py  emg_state_machine_pub_Header.py  emg_state_machine_pub_Header_2.py
emg_state_machine/emg_state_machine_msgs/: CMakeLists.txt  package.xml
emg_state_machine/emg_state_machine_msgs/msg/: vectorString.msg
gForce_data_acquisition_v2_/: Data_Pack_EMG_Raw.m  Data_Pack_euler_angle.m  Data_Pack_quaternion.m  Data_Pack_rotation_matrix.m  EMG_Raw_Data_Pack.m  EMG_data_acquisition.slx  databyteEvaluation.m  fnc_to_be_implemented.m  gForce_data_acquisition_ccOnline_ROS_v2_1_R2020a.slx  gForce_data_acquisition_ccOnline_ROS_v2_1_R2020a.slx.r2020a  gForce_data_acquisition_ccOnline_ROS_v2_1_R2020a.slxc  gForce_data_acquisition_ccOnline_v1_2.slx  gForce_data_acquisition_ccOnline_v2_0.slx  gForce_data_acquisition_v1_2.slx
gForce_data_acquisition_v2_/Headers/: Header_EMG.txt  Header_EMG_Euler_Angle.txt  Header_EMG_Quaternion.txt  Header_Euler_Angle.txt  Header_Quaternion.txt  Header_Recap.txt  Header_Rotation_Matrix.txt
ros_gforce_/config/: 0_Armando_matrix.yaml  0_Armando_range.yaml  Emg_cc_level_gc.xml
ros_gforce_/csv/: 0_Armando.csv
ros_gforce_/launch/: calibration.launch  launch.launch  online.launch  sim_parse.launch
ros_gforce_/msg/: Cc.msg  Hs.msg  cmInt8.msg
ros_gforce_/src/: emg_signal_processing_1_channel.py  emg_signal_processing_full_channel.py  emg_signal_processing_full_channel_high_notch_rms.py  emg_signal_processing_full_channel_notch2_high_maslide.py  emg_signal_processing_full_channel_notch_high.py  emg_signal_processing_full_channel_notch_high_maslide.py  emg_signal_processing_full_channel_notch_high_maslide_Online.py  emg_signal_processing_full_channel_notch_high_maslide_Online_Header.py  emg_signal_processing_full_channel_notch_high_maslide_Online_Header_2.py  emg_signal_processing_full_channel_notch_high_rms.py  gforce_pub.py  import_file_x_matrix.py  import_file_x_matrix_2.py  import_file_x_plot.py  nmf.py  parse_from_realdata.py  parse_from_simulator.py  prova.py  prova_pub.py  pub_simulator_x_parse.py  pub_simulator_x_parse2.py  sample.py  sub_deparse.py
