<?xml version="1.0"?>
<package format="2">
  <name>emg_signal_simulator_msgs</name>
  <version>1.0.0</version>
  <description>emg_signal_simulator_msgs package</description>

  <maintainer email="armando.ameri@studio.unibo.it">Armando Ameri'</maintainer>

  <license>TRI</license>

  <author email="armando.ameri@studio.unibo.it">Armando Ameri'</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
