<?xml version="1.0"?>
<package format="2">
  <name>emg_state_machine</name>
  <version>1.0.0</version>
  <description>The emg_state_machine package</description>

  <maintainer email="armando.ameri@studio.unibo.it">Armando Ameri'</maintainer>

  <license>TRI</license>

  <author email="armando.ameri@studio.unibo.it">Armando Ameri'</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roslaunch</build_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>smach</exec_depend>
  <exec_depend>smach_ros</exec_depend>

  <export>
  </export>

</package>
